[metadata]
name = cbmos
version = 0.0.3
author = Sonja Mathias et al.
author_email = sonja.mathias@it.uu.se
description = A framework for numerical analysis of center-based cell models
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/somathias/cbmos
project_urls =
    Bug Tracker = https://github.com/somathias/cbmos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy>=1.18
    scipy
    parse
    matplotlib

[options.extras_require]
distributed = dask
gpu = cupy
